Grace/tests/gibbs/errors/t168.grace
// ERROR = P1023
if (false) then {
    print "false"
} elseif (true then {
    print "true"
}
